--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,10 @@
 <%- include('./partials/header') %>
 
-<div><img src="https://i.imgur.com/L3o8q2Q.png" alt="" /></div>
-<div><img src="../images/mcdonalds-coca-cola.jpeg" alt="" /></div>
-<div>hello</div>
+<div>
+    <form action="/orders/">
+        <button type="submit">ORDERS</button>
+    </form>
+   
+</div>
+
 <%- include('./partials/footer') %>
