--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,5 +12,8 @@
     <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
   <body>
-    <h1>MacDonalds</h1>
+    <div class="header">
+      <h1>MacDonalds</h1>
+    </div>
+    
   
