add images and add order page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,10 @@
 <%- include('./partials/header') %>
 
-<div>
+<!-- <div>
     <form action="/orders/">
         <button type="submit">ORDERS</button>
     </form>
    
-</div>
+</div> -->
 
 <%- include('./partials/footer') %>
