--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,2 +1,11 @@
+<div class="footer">
+    <div>
+        <ul class="footerMenu">
+        <li>Privacy</li>
+        <li>Terms & Conditions</li>
+        <li>Digital Accessibility</li>
+        </ul> 
+    </div>  
+</div>
 </body>
 </html>
