--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,14 +6,22 @@
     <meta
       name="viewport"
       content="width=
-  , initial-scale=1.0"
+, initial-scale=1.0"
     />
     <title>macDonalds</title>
     <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
   <body>
     <div class="header">
-      <h1>MacDonalds</h1>
+      <div>
+        <span>
+          <a href="/orders/"><li>Menu</li></a></span
+        >
+        <span
+          ><a href="/orders/showOrder/"><li>Order</li></a></span
+        >
+      </div>
+      <div><img src="/images/McD-squareLogo.png" alt="" /></div>
     </div>
-    
-  
+  </body>
+</html>
