--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,30 +1,124 @@
 body {
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  padding:0px;
+  font: 17px "Lucida Grande", Helvetica, Arial, sans-serif;
+  padding: 0px;
   margin: 0px;
   border-collapse: collapse;
+  height: 100vh;
 }
 
-a {
-  color: #00B7FF;
-}
-
-.header {
-  background-color: #c11629;
-  color: white;
-  height:100px;
-}
-
-.foodContainer {
-  display:grid;
-  grid-template-columns: 3;
+div {
   text-align: center;
 }
 
-.foodListitems {
-  grid-column: 2/3;
+a {
+  color: #00b7ff;
 }
 
+ul {
+  list-style-type: none;
+}
+
+.header {
+  background-color: #db0006;
+  color: white;
+  height: 220px;
+  display: grid;
+}
+
+.footer {
+  background-color: white;
+  color: white;
+  height: 220px;
+  display: grid;
+  align-items: center;
+}
+
+#foodContainer {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  justify-items: center;
+  align-items: center;
+}
+
+#foodContainer div {
+  justify-self: center;
+}
+
+#foodShowContainer {
+  display: grid;
+  grid-template-columns: 2fr 2fr;
+  justify-items: center;
+  grid-template-rows: repeat(4, fr);
+  align-items: center;
+}
+
+#foodShowImage {
+  grid-column: 1/2;
+  grid-row: 1 / span 4;
+}
+
+#foodShow1 {
+  grid-column: 2/3;
+  grid-row: 1;
+}
+
+#foodShow2 {
+  grid-column: 2/3;
+  grid-row: 2;
+}
+
+#foodShow3 {
+  grid-column: 2/3;
+  grid-row: 3;
+}
+
+#foodShow4 {
+  grid-column: 2/3;
+  grid-row: 4;
+}
+
+#foodShow5 {
+  grid-column: 2/3;
+  grid-row: 5;
+}
 .title {
   font-weight: bold;
+  font-size: 20px;
+}
+
+.foodShowtitle {
+  font-weight: bold;
+  font-size: 30px;
+}
+
+.font20 {
+  font-size: 20px;
+}
+
+.footerMenu {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+.footerMenu > li {
+  display: inline-block;
+  font-size: 14px;
+  color: gray;
+  margin: 30px;
+}
+
+.ulHeader > li {
+  display: inline-block;
+  color: rgb(250, 250, 250);
+}
+
+.addToBag {
+  width: 180px;
+  height: 50px;
+  background-color: #ffb81c;
+  color: rgb(39, 38, 38);
+  border: 1px solid #ffb71cc3;
+  border-radius: 10px;
 }
