--- a/views/orders/index.ejs
+++ b/views/orders/index.ejs
@@ -1,15 +1,15 @@
 <%- include('../partials/header') %>
 
 <div id="foodContainer">
-  <% foods.forEach (function(food) { %>
+  <%foods.length%> <br /><% foods.forEach (function(food) { %>
   <div id="foodListitems">
-    <a href="/orders/<%=food._id%>"
-      ><img src="/images/<%=food.imageSmall%>" alt=""
-    /></a>
-    <br />
-    <label for="name" class="title"><%=food.name%>"</label><br />
-    <label for="price"><%=food.price%></label><br />
-    <label for="cals"><%=food.cals%></label><br />
+    <div>
+      <a href="/orders/<%=food._id%>">
+        <img src="/images/<%=food.imageSmall%>"
+      /></a>
+    </div>
+    <div><label for="name" class="title"><%=food.name%>"</label></div>
+    <div><label for="price"><%=food.price%>&nbsp; $</label></div>
   </div>
   <%})%>
 </div>
