--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,43 @@
-<%- include('./partials/header') %>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=
+, initial-scale=1.0"
+    />
+    <title>macDonalds</title>
+    <link rel="stylesheet" href="/stylesheets/style.css" />
+  </head>
 
-<!-- <div>
-    <form action="/orders/">
-        <button type="submit">ORDERS</button>
-    </form>
-   
-</div> -->
-
-<%- include('./partials/footer') %>
+  <body class="bgRed">
+    <div class="indexContainter">   
+        <div class="siteBtn">
+          <a href="/orders/" class="white font20">Start to Order</a>
+          <!-- <a href="/orders/showOrder/" class="white">Start to Order</a> -->
+        </div>
+        <div class="Logo">
+          <img src="/images/McDonald's_logo.gif" width="60%" alt="" />
+        </div>      
+        <div class="Google">
+            <!-- <% if (user) { %>
+            <a href="/logout" class="white">
+              <i class="material-icons left">trending_flat</i>Log Out</a>
+            <% } else { %>
+            <a href="/auth/google" class="white">
+              <i class="material-icons left">vpn_key</i>Login with Google</a>
+            <% } %> -->
+            <% if (user) { %>
+              <a href="/logout" class="white">Log Out</a>
+              <% } else { %>
+              <a href="/auth/google" class="white">Login with Google</a>
+              <% } %>
+        </div>
+         
+        </ul>
+      </div>
+    </div>   
+  </body>
+</html>
