--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,8 +15,9 @@
   <body class="bgRed">
     <div class="indexContainter">   
         <div class="siteBtn">
-          <a href="/orders/" class="white font20">Start to Order</a>
-          <!-- <a href="/orders/showOrder/" class="white">Start to Order</a> -->
+          <% if (user) { %>
+          <a href="/foods/" class="white font20">Start to Order</a>
+          <%}%>
         </div>
         <div class="Logo">
           <img src="/images/McDonald's_logo.gif" width="60%" alt="" />
@@ -29,6 +30,7 @@
             <a href="/auth/google" class="white">
               <i class="material-icons left">vpn_key</i>Login with Google</a>
             <% } %> -->
+           
             <% if (user) { %>
               <a href="/logout" class="white">Log Out</a>
               <% } else { %>
