add checkout page

--- a/views/foods/index.ejs
+++ b/views/foods/index.ejs
@@ -4,7 +4,7 @@
   <% foods.forEach (function(food) { %>
   <div>
     <div>
-      <a href="/orders/<%=food._id%>">
+      <a href="/foods/<%=food._id%>">
         <img src="/images/<%=food.imageSmall%>"
       /></a>
     </div>
