--- a/views/foods/show.ejs
+++ b/views/foods/show.ejs
@@ -17,8 +17,7 @@
       ><input type="text" value="1" name="Quantity" />
     </div>
     <div id="foodShow5">
-      <input type="submit" value="Add to bag1" />
-      <button type="submit" class="addToBag">Add to bag2</button>
+      <button type="submit" class="addToBag">Add to bag</button>
     </div>
   </form>
 </div>
