--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,23 +17,12 @@
       <div class="header">
         
         <div class="hMenubar">
-          <a class="white" href="/orders/">Menu</a>
-          <a class="white" href="/orders/showOrder/">Order</a>
+          <!-- <a class="white" href="/foods/">Menu &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a> -->
+          <a class="white" href="/orders/checkout/">Check out</a>
           
         </div>
         <div class="Oath">
-          <!-- <ul class="right">
-            <li>
-              <% if (user) { %>
-                  <a href="/logout"><i class="material-icons left">trending_flat</i>Log Out</a>
-              <% } else { %>
-                  <a href="/auth/google"><i class="material-icons left">vpn_key</i>Login with Google</a>
-              <% } %>
-             
-            </li>
-          </ul> -->
-          
-        
+         
           <div class="hLogo">
             <a href="/"><img src="/images/McD-squareLogo.png" alt="" /></a>
           </div>
