--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -17,37 +17,55 @@ a {
 ul {
   list-style-type: none;
 }
+.inpNumber {
+  border:1px solid gray;
+  border-radius: 5px;
+  size: 10;
+}
+.siteContainer {
+  display:grid;
+  grid-template-rows: 1fr 3fr 1fr ;
+  grid-template-areas: 
+  "S1"
+  "S2"
+  "S3";
+  justify-items: stretch;
+}
 
 .header {
+  grid-area: "S1";
   background-color: #db0006;
   color: white;
   height: 220px;
   display: grid;
-  grid-template-columns: 1fr 3fr 1fr;
-  grid-template-areas:
-    "1 2 3"
+  grid-template-columns: 1fr 3fr;
+  grid-template-areas: "1 2";
 }
-
-.hMenubar {
-  grid-area: "1";
-}
-
-.hLogo {
-  grid-area: "2";
-}
-
-.Oath {
-  grid-area: "3";
+.siteContent {
+  grid-area: "S2";
 }
 
 .footer {
+  grid-area: "S3";
   background-color: white;
   color: white;
   height: 100px;
   display: grid;
-  
-  align-content:flex-end
+  align-content: space-around;
+  background-color: #db0006;
 }
+
+.hMenubar {
+  grid-area: "1";
+  align-content: flex-end;
+}
+
+.hLogo {
+  grid-area: "2";
+  align-items: flex-end;
+}
+
+
 
 .font20 {
   font-size: 20px;
@@ -66,41 +84,21 @@ ul {
 
 #foodShowContainer {
   display: grid;
-  grid-template-columns: 2fr 2fr;
-  justify-items: center;
-  grid-template-rows: repeat(4, fr);
-  align-items: center;
+  grid-template-columns: 1fr 1fr;
 }
 
 #foodShowImage {
-  grid-column: 1/2;
-  grid-row: 1 / span 4;
+  grid-area: "FSC1";
 }
 
-#foodShow1 {
-  grid-column: 2/3;
-  grid-row: 1;
+#foodShowDesc {
+  grid-area: "FSC2";
 }
 
-#foodShow2 {
-  grid-column: 2/3;
-  grid-row: 2;
+#foodShowDesc > div {
+  padding:5px;
 }
 
-#foodShow3 {
-  grid-column: 2/3;
-  grid-row: 3;
-}
-
-#foodShow4 {
-  grid-column: 2/3;
-  grid-row: 4;
-}
-
-#foodShow5 {
-  grid-column: 2/3;
-  grid-row: 5;
-}
 .title {
   font-weight: bold;
   font-size: 20px;
