--- a/views/foods/show.ejs
+++ b/views/foods/show.ejs
@@ -7,13 +7,12 @@
     </div>
     <div id="foodShowDesc">
       <div>
-        <label for="name" class="foodShowtitle"><%=food.name%>"</label>
+        <label for="name" class="foodShowtitle"><%=food.name%>"</label><br><br><br>
       </div>
       <div class="font20">
-        <label for="cals"><%=food.cals%>&nbsp;Cals</label>
+        Calories&nbsp;<%=food.cals%>
       </div>
-      <div><label for="price"><%=food.price%> $</label></div>
-      
+      <div>Price: &nbsp;<%=food.price%> $</div>    
       <div>
         <label for="Quantity">Number&nbsp;</label>
         <input type="Number" value="1" name="Quantity" class="inpNumber" />
