--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -20,7 +20,7 @@
       </div>
       <div class="hMenubar">
         <!-- <a class="white" href="/foods/">Menu &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a> -->
-        <a class="white" href="/orders/checkout/">Check out</a>
+        <a class="white" href="/orders/checkout/">Check out&nbsp;&nbsp;</a>
       </div>
     </div>
   </div>
