--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -17,11 +17,13 @@ a {
 ul {
   list-style-type: none;
 }
+
 .inpNumber {
   border:1px solid gray;
   border-radius: 5px;
   size: 10;
 }
+
 .siteContainer {
   display:grid;
   grid-template-rows: 1fr 3fr 1fr ;
@@ -34,13 +36,14 @@ ul {
 
 .header {
   grid-area: "S1";
+  display: grid;
   background-color: #db0006;
   color: white;
   height: 220px;
-  display: grid;
-  grid-template-columns: 1fr 3fr;
+  grid-template-columns: 1fr 1fr;
   grid-template-areas: "1 2";
 }
+
 .siteContent {
   grid-area: "S2";
 }
@@ -52,20 +55,18 @@ ul {
   height: 100px;
   display: grid;
   align-content: space-around;
-  background-color: #db0006;
 }
 
 .hMenubar {
   grid-area: "1";
-  align-content: flex-end;
+  text-align: right;
+  margin:10px;
 }
 
 .hLogo {
   grid-area: "2";
-  align-items: flex-end;
+  text-align: left;
 }
-
-
 
 .font20 {
   font-size: 20px;
@@ -85,6 +86,7 @@ ul {
 #foodShowContainer {
   display: grid;
   grid-template-columns: 1fr 1fr;
+ grid-template-rows: 1fr;;
 }
 
 #foodShowImage {
