replace tables with div

--- a/views/orders/checkout.ejs
+++ b/views/orders/checkout.ejs
@@ -1,36 +1,32 @@
 <%- include('../partials/header') %>
-<h2>Checkout</h2>
+<h1>Checkout</h1>
 
-<%if (orders.length > 0) {%>
-<table>
-  <%orders.forEach (function(order) {%>
-  <form action="/orders/updateOrder/<%=order.foods[0].id%>" method="post">
-    <tr>
-      <td>
-        <img src="/images/<%=order.foods[0].food.imageSmall%>" width="70%" />
-      </td>
-      <td><%=order.foods[0].food.name%></td>
-      <td>
-        <input
-          type="number"
-          name="Quantity"
-          step="1"
-          value="<%=order.foods[0].Quantity%>"
-        />
-      </td>
-      <td>
-        <button type="submit">Update Order</button>
-      </td>
-      <form action="/orders/deleteOrder/<%=order.foods[0].id%>" method="post">
-        <td>
-          <button type="submit">Delete Order</button>
-        </td>
-      </form>
-    </tr>
+<%if (orders.length > 0) {%> <%orders.forEach (function(order) {%>
+
+  <div>
+    <div>
+      <img src="/images/<%=order.foods[0].food.imageSmall%>" />
+    </div>
+    <div><%=order.foods[0].food.name%></div>
+    <form action="/orders/updateOrder/<%=order.foods[0].id%>" method="post">
+    <div>
+      <input
+        type="number"
+        name="Quantity"
+        step="1"
+        value="<%=order.foods[0].Quantity%>"
+      />
+      <div><button type="submit">Update Order</button></div>
+    </div>
+    </div>
   </form>
+  <div>
+    <form action="/orders/deleteOrder/<%=order.foods[0].id%>" method="post">
+      <button type="submit">Delete Order</button>
+    </form>
+  </div>
+  </div>
 
-  <%})%> <%} else {%>
-</table>
+<%})%> <%} else {%>
 <div>No orders yet</div>
-
 <% } %>
