--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8" />
-<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<meta
-  name="viewport"
-  content="width=
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=
 , initial-scale=1.0"
-/>
-<title>macDonalds</title>
-<link rel="stylesheet" href="/stylesheets/style.css" />
-</head>
+    />
+    <title>macDonalds</title>
+    <link rel="stylesheet" href="/stylesheets/style.css" />
+  </head>
 
-<body>
-  <div id="siteContainer">
-    <div class="header">
-      <div class="hLogo">
-        <a href="/"><img src="/images/McD-squareLogo.png" alt="" /></a>
-      </div>
-      <div class="hMenubar">
-        <!-- <a class="white" href="/foods/">Menu &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a> -->
-        <a class="white" href="/orders/checkout/">Check out&nbsp;&nbsp;</a>
+  <body>
+    <div id="siteContainer">
+      <div class="header">
+        <div class="hLogo">
+          <a href="/foods/"><img src="/images/McD-squareLogo.png" alt="" /></a>
+        </div>
+        <div class="hMenubar">
+          <!-- <a class="white" href="/foods/">Menu &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a> -->
+          <a class="white" href="/orders/checkout/">Check out&nbsp;&nbsp;</a>
+        </div>
       </div>
     </div>
-  </div>
+  </body>
+</html>
