--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,6 +10,12 @@
     />
     <title>macDonalds</title>
     <link rel="stylesheet" href="/stylesheets/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Enriqueta:wght@500&family=Raleway:wght@300&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
