--- a/views/orders/showOrder.ejs
+++ b/views/orders/showOrder.ejs
@@ -1,6 +1,6 @@
 <%- include('../partials/header') %>
 
-<h1>Order summary</h1>
+<h3>Order Summary</h3>
 
 <%order.foods.forEach (function(food) {%>
 <div><img src="/images/<%=order.foods[0].food.imageBig%>" /></div>
