--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -28,6 +28,11 @@ h2 {
   font-size: 15px;
 }
 
+h3 {
+  padding-left: 50px;
+  padding-top: 40px;
+}
+
 .inpNumber {
   border: 1px solid gray;
   border-radius: 5px;
@@ -153,6 +158,15 @@ h2 {
   border-radius: 10px;
 }
 
+.btnCheckout {
+  width: 110px;
+  height: 25px;
+  background-color: #ffb81c;
+  color: rgb(39, 38, 38);
+  border: 1px solid #ffb71cc3;
+  border-radius: 10px;
+}
+
 .bgRed {
   background-color: #db0006;
 }
@@ -181,4 +195,20 @@ h2 {
 }
 .Google {
   grid-area: c;
+}
+
+#checkoutContainer {
+  display: flex;
+  justify-items: left;
+  font-size: 12px;
+  border-bottom: 1px solid rgb(223, 223, 223);
+}
+
+#checkoutContainer div {
+  align-self: center;
+}
+
+#checkoutContainer input {
+  width: 80px;
+  height: 20px;
 }
